# Laplace

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.alpine  Dockerfile.alpine_bash  Dockerfile.bash  Dockerfile.zsh  README.md  frontend.html  log
adapter/: .zshrc  bash
adapter/bash/: .bashrc
adapter/zsh/: .zshrc
examples/1.hello_world/: Dockerfile  README.md
examples/2.alpine_python_dev/: Dockerfile  README.md
examples/2.python_dev/: Dockerfile
examples/3.lmod/: Dockerfile  README.md
examples/3.lmod/modulefiles/: debug
examples/3.lmod/modulefiles/gcc/: 13.3.0.lua
examples/3.lmod_interop/: Dockerfile  README.md  test.c
examples/3.lmod_interop/modulefiles/: debug
examples/3.lmod_interop/modulefiles/clang/: 18.1.3.lua
src/: laplace.cpp  laplace.h  laplace_main.cpp  laplace_main.h  laplace_msgr.cpp  laplace_msgr.h  main.cpp  utils.h
